@@ -1,6 +1,7 @@
 0.220 2023-10-09
   [New Features]
     * Add IO#open method.
+    * Add IO#opendir method.
     
 0.219 2023-06-14
   [Support Changes]
